--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk:
   - oraclejdk8
   - oraclejdk9
 
-script: ./gradlew build checkstyle -Dorg.gradle.daemon=false
+script: ./gradlew build
 
 deploy:
   provider: releases
