--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ branches:
 jobs:
   include:
     - stage: docs
+      sudo: required
       python: 3.6
       install: pip install sphinx
       script: sphinx-build -W docs docs/build
