Install sphinx via apt-get

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ jobs:
     - stage: docs
       sudo: required
       python: 3.6
-      install: pip install sphinx
+      install: apt-get install python-sphinx
       script: sphinx-build -W docs docs/build
 
 # Temporary!
