--- a/gradle/deploy.gradle
+++ b/gradle/deploy.gradle
@@ -1,8 +1,6 @@
 apply plugin: 'maven-publish'
 
-ext.isRelease = {
-  return !project.version.endsWith("-SNAPSHOT")
-}
+ext.isRelease = !(project.version =~ /-SNAPSHOT$/)
 
 publishing {
   repositories {
