--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ allprojects {
   apply plugin: 'eclipse'
 
   group = 'org.natrolite'
-  description = 'Vault is a Permissions and Economy API'
+  description = 'Vault is a Permissions, Chat and Economy API'
   version = '1.6.2'
 }
 
